istio/bookInfoPolicies/default.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default
  namespace: default
spec:
  selector: all()
  ingress:
    - action: Allow
  egress:
    - action: Allow
